toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__for_loop_with_const_declaration.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "for (let i = 0; i < 5; i++) {\n    const y = i * 2;\n    console.log(y);\n}\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: i
      in_scope: false
      exposed: false
- - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - AssignmentToStatement
  - IdentifierReferredTo:
      name: y
      in_scope: false
      exposed: false
- - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - AssignmentFromStatement
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
- - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - InCallExpression
  - Attribute: log
  - IdentifierReferredTo:
      name: console
      in_scope: false
      exposed: false
  - IdentifierReferredTo:
      name: y
      in_scope: true
      exposed: false
