toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__for_loop_with_continue_statement.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "for (let i = 0; i < 10; i++) {\n    if (i % 2 === 0) continue;\n    console.log(i);\n}\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: i
      in_scope: false
      exposed: false
- - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - InCallExpression
  - Attribute: log
  - IdentifierReferredTo:
      name: console
      in_scope: false
      exposed: false
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
