toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__for_loop_with_multiple_declarations.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "for (let i = 0, j = 10; i < j; i++, j--) {\n    console.log(i, j);\n}\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: i
      in_scope: false
      exposed: false
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: j
      in_scope: false
      exposed: false
- - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: j
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: j
      in_scope: true
      exposed: false
  - InCallExpression
  - Attribute: log
  - IdentifierReferredTo:
      name: console
      in_scope: false
      exposed: false
  - IdentifierReferredTo:
      name: i
      in_scope: true
      exposed: false
  - IdentifierReferredTo:
      name: j
      in_scope: true
      exposed: false
