toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__for_of_loop_with_array.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const array = [1, 2, 3, 4, 5];\nfor (const item of array) {\n    console.log(item);\n}\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: array
      in_scope: false
      exposed: true
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: item
      in_scope: false
      exposed: false
- - IdentifierReferredTo:
      name: array
      in_scope: true
      exposed: false
  - InCallExpression
  - Attribute: log
  - IdentifierReferredTo:
      name: console
      in_scope: false
      exposed: false
  - IdentifierReferredTo:
      name: item
      in_scope: true
      exposed: false
