toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__for_loop_tests__traditional_for_loop-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "for (let i = 0; i < 5; i++) {\n    console.log(i);\n}\n"
---
internal_call_graph: {}
cell_exposed_values: {}
cell_depended_values: {}
triggerable_functions: {}
